# routes/clients.js
@@ -5,9 +5,9 @@ const clientsController = require('../controllers/clients.js');
 const { isAuthenticated } = require('../middleware/authenticate.js');
 
 router.get('/', clientsController.getAllClients);
-router.get('/:id', clientsController.getSingleClients);
+router.get('/:id', clientsController.getSingleClient);
 router.post('/', isAuthenticated, validation.client, clientsController.createClient);
 router.put('/:id',isAuthenticated, validation.client, clientsController.updateClient);
-router.delete('/:id', isAuthenticated, clientsController.deleteClients);
+router.delete('/:id', isAuthenticated, clientsController.deleteClient);
 
 module.exports = router;
